fixed submit button gap caused by border radius

--- a/resources/assets/sass/application/atoms/_inputs.scss
+++ b/resources/assets/sass/application/atoms/_inputs.scss
@@ -42,8 +42,9 @@ button[type="submit"]{
         top: 100%;
         left: 0;
         width: 100%;
-        height: 0.375rem;
+        height: 0.5rem;
         border-radius: 0 0 $global-border-radius $global-border-radius;
+        transform: translateY(-$global-border-radius);
         @include transition(background-color);
         z-index: -1;
     }
@@ -52,7 +53,7 @@ button[type="submit"]{
         top: 0.125rem;
 
         &::after{
-            height: 0.25rem;
+            height: 0.375rem;
         }
     }
 
