--- a/resources/assets/sass/application/atoms/_layout.scss
+++ b/resources/assets/sass/application/atoms/_layout.scss
@@ -15,6 +15,7 @@
     background-size: cover;
     background-position: center;
     opacity: 0.4;
+    z-index: -10;
 }
 
 .fixed-background{
