--- a/resources/assets/sass/application/molecules/_project-list.scss
+++ b/resources/assets/sass/application/molecules/_project-list.scss
@@ -11,6 +11,7 @@
         @include transition(background-color);
         min-height: 6.25rem;
         overflow: hidden;
+        z-index: 0;
         cursor: pointer;
 
         @media screen and (min-width: $laptop-breakpoint){
